--- a/Histórias de terror/index.html
+++ b/Histórias de terror/index.html
@@ -38,49 +38,44 @@
         </div>
 
         <div class="passo" id="passo-5">
-            <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
-                pista está no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
+            <p>Quando você sai da casa percebe que, a casa ficava no meio da floresta e ja esta de noite, então voce prefere entrar na casa denovo e passar a noite la.</p>
+            <button class="btn-proximo" data-proximo="7">Passar a noite na casa assombrada</button>
         </div>
 
         <div class="passo" id="passo-6">
-            <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
-            <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
+            <p>Voce acorda na casa e ja é de manha então voce decide voltar para a sua casa e enfrentar a floresta e achar uma estrada.</p>
+            <button class="btn-proximo" data-proximo="8">Achar uma estrada e sair da floresta</button>
         </div>
 
         <div class="passo" id="passo-7">
-            <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
-            <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
-            <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
+            <p>Apos encontrar uma estrada, aparece um carro você pega a carona? ou prefere continuar andando.</p>
+            <button class="btn-proximo" data-proximo="9">andar pela estrada</button>
+            <button class="btn-proximo" data-proximo="10">Pegar a carona </button>
         </div>
 
         <div class="passo" id="passo-8">
-            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>Apos pegar a carona, o motorista de deixa num posto para se alimentar e seguir e, viagem ate casa</p>
+            <button class="btn-proximo" data-proximo="7">Se alimentar no posto e pedir para continuar seguindo viage,</button>
         </div>
 
         <div class="passo" id="passo-9">
-            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada da
-                cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <p>O motorista chega na cidade e te deixa no ponto de onibus para você voltar para a sua casa.</p>
+            <button class="btn-proximo" data-proximo="11">Pegar o onibus</button>
         </div>
 
         <div class="passo" id="passo-10">
-            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da cidade perdida
-                aqui.</p>
-            <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
+            <p>Apos pegar o onibus voce pede para o motorista deixar você pular a catraca, pois você perder o seu dinheiro.</p>
+            <button class="btn-proximo" data-proximo="12">Pedir para o motorista</button>
         </div>
 
         <div class="passo" id="passo-11">
             <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
-            <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
-                este lugar</p>
+            <p>Voce finalmente consegue chegar no seu bairro, e percebe que se passou mais de uma semana que você ficou perdino na casa assombrada</p>
         </div>
 
         <div class="passo" id="passo-12">
-            <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as inscrições
-                que levam à cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <p>Você chegou rm frente a sua casa, e relembra todos os momentos que passou perigo na casa, e percebe que todas as suas escolha te levaram com segurança para a casa.</p>
+            <button class="btn-proximo" data-proximo="11">Finalmente entrar na casa.</button>
         </div>
     </main>
     <script src="script.js"></script>
